--- a/src/components/style.css
+++ b/src/components/style.css
@@ -152,3 +152,34 @@
     background: rgb(2, 0, 36);
     background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(98, 149, 235, 1) 87%);
 }
+
+/* About section ............... */
+
+
+.about-bg {
+    background: rgb(238, 174, 202);
+    background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(174, 204, 240, 1) 100%);
+}
+
+.profile-img {
+    /* border: 1px solid rgb(52, 52, 104); */
+    border-radius: 50%;
+    width: 200px;
+    background: rgb(27, 241, 242);
+    background: linear-gradient(90deg, rgba(27, 241, 242, 1) 50%, rgba(2, 0, 36, 1) 77%);
+    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+}
+
+.skills li {
+    padding: 5px;
+    margin-left: 5px;
+    background-color: #853b3b;
+    margin-top: 5px;
+    border-radius: 8px;
+
+    color: #eeeeef;
+}
+
+/* About section ............... */
